Updated information and layout

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "CrowxarFighter.png"
   name             : "Crowxar"
   pronouns         : "He/Him"  
-  bio              : "Learning Python Application and Software Development - Branching out into Mobile apps"
+  bio              : "Learning Python Application and Software Development - Branching out into Mobile applications"
   location         : "Nevada, USA"
   employer         : "Lockheed Martin"
   uri              : # URL
